--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -19,6 +19,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    transition: opacity .3s linear;
   }
 }
 
@@ -64,8 +65,115 @@ main.timeline {
 }
 
 aside.explore {
-  padding: 100px;
-  outline: 1px solid black;
-  height: 100vh;
+  padding: 100px 50px;
   position: relative;
+
+  h3 {
+    text-align: center;
+    font-family: @df-sans;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 15px;
+    margin: 0 0 50px;
+  }
+
+  .plane-frame {
+    .display-flex();
+    .flex-wrap(wrap);
+    .justify-content(center);
+    .align-items(center);
+  }
+
+  .plane {
+    margin: 20px;
+  }
+
+  .plane-detail {
+    display: none;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: fade(white, 40%);
+    transition: opacity .3s linear;
+    font-family: @df-sans;
+    font-size: 16px;
+    z-index: 999;
+
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      width: 100%;
+      max-width: 60%;
+    }
+
+    &.ready {
+      display: block;
+    }
+
+    &.show {
+      opacity: 1;
+    }
+
+    .close {
+      float: right;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all .2s linear;
+      border-radius: 100%;
+      color: @st-dark-blue;
+
+      &:hover, &:focus {
+        color: @df-blue;
+      }
+    }
+
+    .landing-pad {
+      position: relative;
+      background: linear-gradient(to bottom, @st-light-blue, @df-off-white 60%, @st-dark-green 60%, @st-light-green 100%);
+
+      &::before {
+        content: "";
+        display: block;
+        padding-bottom: percentage(9 / 16);
+      }
+
+      .plane {
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0) rotate(-1deg);
+        position: absolute;
+        transition: all 1s ease-out .3s;
+        margin: 0;
+        width: 90%;
+        height: auto;
+        opacity: 1;
+
+        &.landing {
+          transform: translate3d(-1000px, -300px, 0) rotate(-4deg);
+          opacity: .5;
+        }
+      }
+    }
+
+    .stats {
+      list-style-type: none;
+      padding: 0;
+    }
+  }
+}
+
+.exploring {
+  .plane.side {
+    opacity: 0;
+    z-index: -99;
+  }
 }
