--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -30,12 +30,13 @@ header.splash {
   position: relative;
 
   h1 {
-    font-family: @headline;
     font-size: 100px;
+    font-style: italic;
   }
 
   .chatter {
-    font-family: @subhead;
+    font-family: @df-sans;
+    font-size: 21px;
     margin: 0 auto;
     max-width: 400px;
   }
@@ -43,12 +44,11 @@ header.splash {
 
 main.timeline {
 
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
 
   .stage {
     background: fade(white, 90%);
-    padding: 20px 40px;
     margin-bottom: 300px;
     position: relative;
     box-shadow: 0px 8px 16px -8px fade(black, 20%);
@@ -58,7 +58,49 @@ main.timeline {
     }
 
     h2 {
-      font-family: @subhead;
+      font-style: italic;
+      padding: 16px;
+      margin: 0;
+      display: block;
+      text-align: center;
+    }
+  }
+
+  .row {
+    .display-flex();
+  }
+
+  .photo {
+    padding: 0 16px;
+    .flex(2);
+
+    img {
+      display: block;
+      width: 100%;
+    }
+
+    .credit {
+      text-align: right;
+      text-transform: uppercase;
+      font-size: 14px;
+      font-style: italic;
+      font-family: @df-sans;
+    }
+
+    .caption {
+      font-size: 16px;
+      font-family: @df-sans;
+      padding: 8px 0;
+    }
+  }
+
+  .text {
+    font-size: 14px;
+    padding: 0 16px;
+    .flex(1);
+
+    p:first-child {
+      margin-top: 0;
     }
   }
 
