--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -32,13 +32,20 @@ header.splash {
   h1 {
     font-size: 100px;
     font-style: italic;
+    text-shadow: 0 0 16px lighten(@st-light-blue, 10%);
   }
 
   .chatter {
     font-family: @df-sans;
     font-size: 21px;
     margin: 0 auto;
-    max-width: 400px;
+    max-width: 600px;
+    padding: 20px;
+    background: fade(lighten(@st-light-blue, 10%), 50%);
+  }
+
+  .credit {
+    margin: 40px;
   }
 }
 
